2007-05-31  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage-convert.c: unified progress strings.

2007-05-31  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage-convert.c: minor code cleanup.

2007-05-31  Sven Neumann  <sven@gimp.org>

	* plug-ins/helpbrowser/queue.c:  allocate structs using GSlice.

2007-05-31  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/Lighting/lighting_ui.c
	* plug-ins/FractalExplorer/Dialogs.c: Specify maximum field width in
	fscanf() to avoid buffer overflows.

2007-05-31  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/gfig/gfig.c: Specify maximum field width in sscanf() to
	avoid buffer overflows.

2007-05-31  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/spheredesigner.c: Don't write to an uninitialized
	pointer (end).

2007-05-31  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/gfig/gfig-style.c: Specify maximum field width in
	sscanf() to avoid buffer overflows.

2007-05-31  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/gflare/gflare.c: Specify maximum field width in
	fscanf() to avoid buffer overflows.

2007-05-30  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/mail.c: Added format strings to dangerous
	fprintf() calls without them which directly print variable data.

2007-05-30  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/gfig/gfig-style.c: Use a macro for size of style text
	entries array.

2007-05-30  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/decompose.c: Replaced hardcoded constant with
	sizeof array.

2007-05-30  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/gtm.c: Replaced g_malloc()+sprintf() with more
	safe g_strdup_printf().

2007-05-30  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/decompose.c: Use strncpy() instead of strcpy() to
	avoid buffer overflows.

2007-05-30  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/compose.c: Specify maximum field width in
	sscanf() to avoid buffer overflows.

2007-05-30  Mukund Sivaraman  <muks@mukund.org>
